--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "responsive",
     "theme"
   ],
-  "homepage": "",
+  "homepage": "https://github.com/jankovicgd/cinziaCV#readme",
   "bugs": {
     "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
     "email": "jankovic.gd@gmail.com"
@@ -22,11 +22,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/jankovicgd/cinziaCV"
+    "url": "git+https://github.com/jankovicgd/cinziaCV.git"
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta.2",
     "devicons": "^1.8.0",
+    "express": "^4.16.2",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.6",
     "simple-line-icons": "^2.4.1"
@@ -39,5 +40,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "3.0.0"
+  },
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
