--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "homepage": "https://github.com/jankovicgd/cinziaCV#readme",
   "bugs": {
-    "url": "https://github.com/BlackrockDigital/startbootstrap-resume/issues",
+    "url": "https://github.com/jankovicgd",
     "email": "jankovic.gd@gmail.com"
   },
   "license": "MIT",
@@ -43,7 +43,6 @@
   },
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   }
 }
